plex/pms-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pms-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: pms
    spec:
      nodeSelector:
        kubernetes.io/hostname: wedge
      volumes:
        - name: pms-config
          hostPath:
            path: /dockerfs/pms/config
        - name: pms-transcode
          hostPath:
            path: /dockerfs/pms/transcode
        - name: pms-media
          hostPath:
            path: /mnt/media
      containers:
      - name: pms
        image: plexinc/pms-docker
        volumeMounts:
        - mountPath: /config
          name: pms-config
        - mountPath: /transcode
          name: pms-transcode
        - mountPath: /media
          name: pms-media
          readOnly: true
        ports:
        - containerPort: 32400
        - containerPort: 3005
        - containerPort: 8324
        - containerPort: 1900
          protocol: UDP
        - containerPort: 32410
          protocol: UDP
        - containerPort: 32412
          protocol: UDP
        - containerPort: 32413
          protocol: UDP
        - containerPort: 32414
          protocol: UDP
