plex/pms-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pms-service
spec:
  selector:
    app: pms
  type: NodePort
  ports:
    - port: 32400
      nodePort: 32400
